--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "SET DEBUG=miniproject:* & mocha -w"
   },
   "dependencies": {
+    "circle-to-polygon": "^1.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "geojson-utils": "^1.1.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
     "mongoose": "^5.3.2",
