--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "circle-to-polygon": "^1.0.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-graphql": "^0.7.1",
     "geojson-utils": "^1.1.0",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.3",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
     "mongoose": "^5.3.2",
